# newpipe

./: .gitignore  ANALYSIS.md  FUTURE.md  MANIFESTO.md  README.md  TEST_COVERAGE_ANALYSIS.md  encoder_only.safetensors  newpipe  package-lock.json  package.json  sample.safetensors  test.jsonl  tsconfig.json  vitest.config.ts
commands/python/: arrow-filter.py  arrow-lower.py  big-gen.py  cols.py  count.py  filter.py  gen.py  groupby.py  pcat.py  sort.py  st-gen.py  tcat.py  to-st.py  unbatch.py  unique.py
commands/python/python_demo/: create_sample_st.py
commands/rust/: Cargo.toml
commands/ts/: bcat.ts  cat.ts  grep.ts  head.ts  jq.ts  ls.ts  slow.ts  tree.ts  view.ts
demo/: 01_polyglot_data.sh  02_backpressure_vis.sh  03_tensor_forge.sh
scripts/: build-bin.js
sdk/python/: newpipe.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: index.ts  mcp-server.ts
src/commands/: bcat.ts  big-gen.py  cat.ts  gen.py  grep.ts  head.ts  jq.ts  lift.ts  lower.ts  ls.ts  pcat.py  slow.ts  st-gen.py  tcat.py  to-st.py  tree.ts  view.ts
src/core/: Frame.ts  Shell.ts  Signal.ts  SignalPlane.ts  SmartPipe.ts  doctor.ts
src/core/adapters/: lift.ts  lower.ts
src/utils/: epipe.ts  help.ts
tests/: commands-adapter.test.ts  commands-producer.test.ts  commands-transform.test.ts  commands.test.ts  frame.test.ts  integration-extended.test.ts  integration.test.ts  north-star.test.ts  python-sdk.test.ts  shell.test.ts  signal.test.ts  smartpipe.test.ts  split-pipeline.test.ts
